--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/pace/pace.min.css">
     <script src="%PUBLIC_URL%/plugins/pace/pace.min.js"></script>
     <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
-    <title>React App</title>
+    <title>Weerapat1993 Github Profile</title>
   </head>
   <body class="hold-transition skin-purple layout-top-nav">
     <div id="root"></div>
